# kafka-microservices-spark-ecom

./: .env.example  .gitignore  AI_AGENT_PROMPT.md  API.md  AUTO_REFILL_QUICK_REFERENCE.md  CHANGELOG.md  DASHBOARDS_COMPLETE_SUITE.md  DASHBOARD_WORKFLOW.md  DLQ_DASHBOARD_GUIDE.md  DOCKER_IMAGES.md  Dockerfile.spark  ENDPOINT_SELECTION_GUIDE.md  FIXES_PR2_SUMMARY.md  IDEMPOTENCY_IMPLEMENTATION.md  INVENTORY_VELOCITY_SCHEDULER.md  KAFKA_CLI_COMMANDS.sh  KAFKA_IDEMPOTENCY_TEST.md  METRICS_DESIGN_FIX.md  METRICS_NORMALIZATION.md  MONITORING_AND_OBSERVABILITY_PLAN.md  MONITORING_IMPLEMENTATION_GUIDE.md  MONITORING_QUICK_REFERENCE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3X_ENHANCEMENTS.md  PHASE_3_MONITORING_COMPLETE.md  PORTS.md  PROJECT_STARTUP_AND_OPERATION_GUIDE.md  QUICKSTART_MONITORING.md  README.md  SPARK_ANALYTICS.md  SPARK_ANALYTICS_DASHBOARD.md  SPARK_ANALYTICS_DASHBOARD_TESTING.md  SPARK_ANALYTICS_DEEP_DIVE.md  SPARK_ANALYTICS_TESTING.md  SPARK_OPERATIONS.md  SYSTEM_HEALTH_METRICS.md  TEST_MULTIPLE_ORDERS.md  TEST_OPERATIONAL_METRICS.md  TEST_WORKFLOW_README.md  (+16 more)
.pgadmin_config/: servers.json
analytics/: Dockerfile  Dockerfile.dlq-monitor  Dockerfile.exporter  dlq_metrics_monitor.py  metrics_exporter.py  requirements.txt  spark_session.py
monitoring/: Dockerfile.grafana  Dockerfile.prometheus  prometheus.yml
scripts/: README.md  auto-refill-inventory.py  clean-database.sh  dashboard-sync.sh  dlq-auto-replay.py  dlq-replay.py  generate-orders.sh  kill-auto-refill.sh  schedule-inventory-velocity.sh  setup-dlq-monitoring.sh  simulate-users.py  (+4 more)
(+60 files in other folders)
