[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-microservices-spark-ecom"
version = "1.0.0"
description = "Event-driven e-commerce backend with Kafka, FastAPI, and PySpark"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "redis==5.0.0",
    "confluent-kafka==2.3.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyspark==3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*", "analytics*"]
